--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,1 +1,51 @@
-//
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+///* HEADER */
+header {
+    display: flex;
+    justify-content: space-around;
+    margin-bottom: 20px;
+    text-align: center;
+    padding-top: 20px;
+
+    img {
+        width: 100px;
+    }
+    input {
+        border-top-style: hidden;
+        border-right-style: hidden;
+        border-left-style: hidden;
+        border-bottom-style: groove;
+        background-color: #eee;
+        height: 40px;
+        margin-top: 20px;
+    }
+}
+
+#other-sites {
+    background-color: #0282f9;
+    color: white;
+    height: 20px;
+    width: 100%;
+}
+
+nav {
+    display: inline-block;
+    vertical-align: top;
+    margin-top: 30px;
+}
+
+nav a:link {
+    text-decoration: none;
+    color: black;
+}
+
+nav li {
+    list-style-type: none;
+    display: inline;
+    margin: 10px;
+}
