--- a/public/css/app.css
+++ b/public/css/app.css
@@ -50,3 +50,33 @@ nav li {
   margin: 10px;
 }
 
+main {
+  background-color: #1c1c1c;
+}
+
+.content {
+  width: 80%;
+  margin-left: 20%;
+}
+
+#jumbo {
+  background-image: url("https://cdn.discordapp.com/attachments/852906870033481799/934122558238896238/jumbotron.jpg");
+  width: 100%;
+  height: 400px;
+  background-size: 100%;
+  background-repeat: no-repeat;
+}
+
+.blue-btn {
+  display: inline-block;
+  background-color: #0282f9;
+  width: 150px;
+  height: 40px;
+  border: none;
+}
+
+.blue-btn a {
+  text-decoration: none;
+  color: white;
+}
+
