--- a/public/css/app.css
+++ b/public/css/app.css
@@ -56,7 +56,7 @@ main {
 
 .content {
   width: 80%;
-  margin-left: 20%;
+  margin-left: 10%;
 }
 
 #jumbo {
@@ -78,5 +78,31 @@ main {
 .blue-btn a {
   text-decoration: none;
   color: white;
+}
+
+.first-btn {
+  margin-top: -15px;
+}
+
+#comic-books {
+  width: 100%;
+  background-color: #1c1c1c;
+  color: white;
+  display: flex;
+  flex-wrap: wrap;
+}
+
+#comic-books .product {
+  margin: 30px auto;
+  text-align: center;
+  width: 15%;
+}
+
+#comic-books .product img {
+  height: 235px;
+}
+
+#comic-books h3 {
+  vertical-align: middle;
 }
 
