detail page descrizione prodotto

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -150,7 +150,7 @@ main {
   justify-content: space-between;
   height: 300px;
   text-align: center;
-  background-image: url("https://cdn.discordapp.com/attachments/852906870033481799/934833409522548736/footer-bg.jpg");
+  background-image: url(/images/footer-bg.jpg?dfd68d2946f211e1b678af05fd2f830b);
 }
 
 .list {
@@ -174,5 +174,58 @@ main {
 #dc-links li {
   color: #5e6b70;
   list-style-type: none;
+}
+
+.comic-banner {
+  background-color: #0282f9;
+  height: 100px;
+  width: 100%;
+}
+
+.comic-banner img {
+  margin-left: 300px;
+  margin-top: -225px;
+}
+
+.comic-main {
+  width: 60%;
+  margin-left: 20%;
+  display: flex;
+  justify-content: space-between;
+}
+
+.comic-main h3 {
+  color: #084676;
+  font-size: 30px;
+  margin-top: 80px;
+  margin-bottom: 30px;
+}
+
+.green-btn {
+  background-color: #55ba59;
+  display: inline-block;
+  border: 1px solid gray;
+  cursor: pointer;
+}
+
+.green-btn div {
+  display: inline-block;
+  margin-top: 10px;
+}
+
+.first-green {
+  width: 400px;
+  height: 40px;
+}
+
+.second-green {
+  height: 40px;
+  width: 200px;
+  text-align: center;
+}
+
+.description {
+  width: 600px;
+  margin: 20px 0 100px 0;
 }
 
