--- a/public/css/app.css
+++ b/public/css/app.css
@@ -188,8 +188,8 @@ main {
 }
 
 .comic-main {
-  width: 60%;
-  margin-left: 20%;
+  width: 70%;
+  margin-left: 15%;
   display: flex;
   justify-content: space-between;
 }
@@ -227,5 +227,37 @@ main {
 .description {
   width: 600px;
   margin: 20px 0 100px 0;
+}
+
+.adv {
+  margin-left: 50px;
+  margin-top: 100px;
+}
+
+.adv h4 {
+  display: inline-block;
+}
+
+.adv-comic {
+  display: inline-block;
+  height: 300px;
+  width: 300px;
+  background-image: url("https://i0.wp.com/www.comicbookrevolution.com/wp-content/uploads/2018/07/Superman-1-1-1.jpg?ssl=1");
+  background-size: 100%;
+  background-repeat: no-repeat;
+}
+
+.adv-comic h3 {
+  color: white;
+  padding-top: 50px;
+  margin-left: 10px;
+}
+
+.adv-comic button {
+  background-color: #ffe665;
+  width: 150px;
+  height: 50px;
+  margin-bottom: 50px;
+  margin-left: 10px;
 }
 
