--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -104,6 +104,10 @@ main {
 
     h3 {
         vertical-align: middle;
+        color: white;
+    }
+    a:link {
+        text-decoration: none;
     }
 }
 
