--- a/public/css/app.css
+++ b/public/css/app.css
@@ -105,6 +105,11 @@ main {
 
 #comic-books h3 {
   vertical-align: middle;
+  color: white;
+}
+
+#comic-books a:link {
+  text-decoration: none;
 }
 
 .second--btn {
@@ -188,8 +193,8 @@ main {
 }
 
 .comic-main {
-  width: 70%;
-  margin-left: 15%;
+  width: 60%;
+  margin-left: 20%;
   display: flex;
   justify-content: space-between;
 }
